fixed font margin on mobile

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ h2
 	}
 	h1 {
 		font-size: 150%;
-		margin-top: 10%;
+		margin-top: 8%;
 	}
 	h2 {
 		font-size: 90%;
